@startuml
'https://plantuml.com/class-diagram

hide circle
skinparam classAttributeIconSize 0



class PlanController {
 +PriceHistory(): Iterable<PriceHistoryView>
}



class PlanService {
 +findAllPriceHistory(Long idPlan,Integer page, Integer batchSize): Iterable<PriceHistory>
}
class PlanServiceImpl{
 +findAllPriceHistory(Long idPlan,Integer page, Integer batchSize): Iterable<PriceHistory>
}

interface PlanRepository <<interface>> {
 +findById(id): Optional<Plan>
}
interface PriceHistoryRepository <<interface>> {
 +searchByPlanType(planType): Page<PriceHistory>
}

class Plan {
    -nMins
    -maxDevices
    -musicCollections
    -musicSuggestions
    -monthlyFee
    -annualFee
    -planState
    -planType
    -planPromote
    -HTMLdescription
    Plan(final String planType, final Integer numMinutes, final Integer maxDevices, final Integer musicCollections,final String musicSuggestions, final Integer monthlyFee, final Integer annualFee,
                        final String htmlDescription)
}
class PriceHistory {
    -oldPrice_monthlyFee
    -newPrice_monthlyFee
    -oldPrice_annualFee
    -newPrice_annualFee
    -changeDate
PriceHistory(final Plan plan, final double oldPrice_monthlyFee, \nfinal double newPrice_monthlyFee, final double
oldPrice_annualFee, final double newPrice_annualFee, final LocalDate changeDate)
}


PlanRepository "1" --> "0..*" Plan:  records
PriceHistoryRepository "1" --> "0..*" PriceHistory:  records
PlanController ..> PlanService
PlanServiceImpl ..> PlanRepository
PlanServiceImpl ..> PriceHistoryRepository

PriceHistory "1" --> "1" Plan
PlanServiceImpl ..> PriceHistory
PlanServiceImpl ..> Plan
PlanService ..> Plan
PlanServiceImpl .up.|> PlanService

@enduml